# GodotPP

./: CMakeLists.txt  Lab_1_Linking_Context.md  README.md
.github/workflows/: build.yml
game/scenes/: game.tscn
src/client/: network_manager.cpp  network_manager.h
src/godotpp/: CMakeLists.txt
src/godotpp/include/: gd_example.h
src/godotpp/src/: gd_example.cpp  register_types.cpp
src/server/src/: main.cpp
